# src/controllers/recipe.js
@@ -4,51 +4,43 @@ import createHttpError from 'http-errors';
 import { parsePaginationParams } from '../utils/parsePaginationParams.js';
 import { parseRecipeFilterParams } from '../utils/parseRecipeFilterParams.js';
 import { parseSortParams } from '../utils/parseSortParams.js';
+import { parseQueryOptions } from '../utils/parseQueryOptions.js';
 import { getPhotoUrl } from '../utils/getPhotoUrl.js';
-
 import { isRecipeFavorite } from '../utils/isRecipeFavorite.js';
 import mongoose from 'mongoose';
-
 import { getEnrichedRecipes, getEnrichedRecipe } from '../services/ingredient.js';
 
-
-// /api/recipes пошук рецептів за іменем/інгрідієнтами чи категоріями
+// ================================FIND ALL RECIPES=======================================
 // http://localhost:3000/api/recipes?ingredient=640c2dd963a319ea671e36f9
 export const getRecipes = async (req, res) => {
+  const { page, perPage, skip, sortBy, sortOrder, filter } = parseQueryOptions(req.query);
 
-  const { page, perPage, skip } = parsePaginationParams(req.query);
-  const filter = parseRecipeFilterParams(req.query);
+  const recipes = await Recipe.find(filter)
+  .collation({ locale: 'en', strength: 2 })
+    .sort({ [sortBy]: sortOrder === 'asc' ? 1 : -1 })
+    .skip(skip)
+    .limit(perPage);
 
-  const recipes = await Recipe.find(filter).skip(skip).limit(perPage);
   const total = await Recipe.countDocuments(filter);
 
-
    if (!recipes || recipes.length === 0) {
-      throw createHttpError(404, 'There are no recipes matching your search!');
-    }
-  // передаємо в getEnrichedRecipes масив рецептів для збагачення їх інгредієнтами
+      throw createHttpError(404, 'There are no recipes matching your search!'); }
+
   const enrichedRecipes = await getEnrichedRecipes(recipes);
 
-
-    // Якщо користувач є, перевіряємо для кожного рецепта, чи є він у фейворітс
     if (req.user) {
-      // Масив з промісів для перевірки фейворітів кожного рецепта
       const favoritesChecks = enrichedRecipes.map(async (recipe) => {
         const isFavorite = await isRecipeFavorite(req.user._id, recipe._id);
-        return {
-          ...recipe,
-          isFavorite,
-        };
+        return { ...recipe, isFavorite };
       });
 
-      // Чекаємо, поки всі проміси завершаться
-      const enrichedWithFavorites = await Promise.all(favoritesChecks);
+    const enrichedWithFavorites = await Promise.all(favoritesChecks);
 
       return res.json({
         status: 200,
         message: 'Successfully found recipes!',
         data: {
-          data: enrichedWithFavorites,
+          recipes: enrichedWithFavorites,
           page,
           perPage,
           totalItems: total,
@@ -63,7 +55,7 @@ export const getRecipes = async (req, res) => {
         status: 200,
         message: 'Successfully found recipes!',
         data: {
-          data: enrichedRecipes,
+          recipes: enrichedRecipes,
           page,
           perPage,
           totalItems: total,
@@ -75,7 +67,7 @@ export const getRecipes = async (req, res) => {
     }
 };
 
-// /api/recipes/:id пошук для отримання детальної інформації про рецепт за його id
+// ================================FIND RECIPET BY ID=======================================
 // http://localhost:3000/api/recipes?ingredient=640c2dd963a319ea671e36f9
 export const getRecipeById = async (req, res, next) => {
   const { id } = req.params;
@@ -88,8 +80,6 @@ if (!mongoose.Types.ObjectId.isValid(id)) {
     return next(createHttpError(404, 'Recipe not found'));
   }
 
-
-// перевірка, чи є цей рецепт у фейворітс
 let isFavorite = false;
 if (req.user) {
   try {
@@ -98,19 +88,18 @@ if (req.user) {
     return next(createHttpError(500, 'Internal Server Error'));
   }
 }
-  // передаємо в getEnrichedRecipe 1 рецепт
+
   const enrichedRecipe = await getEnrichedRecipe(recipe);
-  //повертає збагачений рецепт
-  // res.status(200).json(recipe);
 
   res.status(200).json({
     status: 200,
     message: 'Recipe found successfully',
-    data: { ...enrichedRecipe, isFavorite }
+    data:
+    {recipes: { ...enrichedRecipe, isFavorite }}
   });
 };
 
-// /add-recipe приватний ендпоінт для створення власного рецепту
+// ================================ADD NEW RECIPET=======================================
 // http://localhost:3000/api/recipes/add-recipe
 
 export const createRecipe = async (req, res, next) => {
@@ -120,77 +109,65 @@ export const createRecipe = async (req, res, next) => {
   const newRecipeData = {
     ...req.body,
     owner: ownerId,
-    recipeImg: photoUrl,
-    cookiesTime: Number(req.body.cookiesTime),
+    thumb: photoUrl,
+    time: Number(req.body.time),
     ingredientAmount: Number(req.body.ingredientAmount),
     cals: req.body.cals ? Number(req.body.cals) : undefined,
   };
 
   const newRecipe = await Recipe.create(newRecipeData);
 
-
+  const enrichedRecipe = await getEnrichedRecipe(newRecipe);
   res.status(201).json({
     status: 201,
     message: 'Successfully created a new recipe!',
-    data: newRecipe,
+    data: {recipes: enrichedRecipe},
   });
 };
 
-// /profile/own пошук рецептів , які я постила
-
+// ================================GET ALL MY RECIPES=======================================
 // http://localhost:3000/api/recipes/profile/own?page=2&limit=5
 export const getMyRecipes = async (req, res, next) => {
   const ownerId = req.user._id;
-
-  const { page, perPage, skip } = parsePaginationParams(req.query);
-  const { sortBy, sortOrder } = parseSortParams(req.query);
-  const filter = parseRecipeFilterParams(req.query);
+  const { page, perPage, skip, sortBy, sortOrder, filter } = parseQueryOptions(req.query);
 
   filter.owner = ownerId;
 
+  const totalItems = await Recipe.countDocuments(filter);
+    if (totalItems === 0) { throw createHttpError(404, 'There are no recipes yet!'); }
 
-    const totalItems = await Recipe.countDocuments(filter);
-    if (totalItems === 0) {
-      throw createHttpError(404, 'There are no recipes yet!');
-    }
+  const findRecipes = await Recipe.find(filter)
+    .collation({ locale: 'en', strength: 2 })
+    .sort({ [sortBy]: sortOrder === 'asc' ? 1 : -1 })
+    .skip(skip)
+    .limit(perPage);
 
-    const totalPages = Math.ceil(totalItems / perPage);
-
-    const recipes = await Recipe.find(filter)
-      .sort({ [sortBy]: sortOrder === 'asc' ? 1 : -1 })
-      .skip(skip)
-      .limit(perPage);
-
-  // Для кожного рецепту викликаємо isRecipeFavorite
-    // Щоб зробити це ефективніше, можна виконати паралельно через Promise.all
-
-    const recipesWithFavorite = await Promise.all(
-      recipes.map(async (recipe) => {
-        const isFavorite = await isRecipeFavorite(ownerId, recipe._id);
+  const recipesWithFavorite = await Promise.all(
+    findRecipes.map(async (recipe) => {
+    const isFavorite = await isRecipeFavorite(ownerId, recipe._id);
         return { ...recipe.toObject(), isFavorite };
       })
-    );
+  );
 
-  // передаємо в getEnrichedRecipes масив рецептів для збагачення їх інгредієнтами
-  const enrichedRecipes = await getEnrichedRecipes(recipesWithFavorite);
+  const recipes = await getEnrichedRecipes(recipesWithFavorite);
 
     res.status(200).json({
       status: 200,
       message: 'Successfully found recipes!',
       data: {
-        recipes: enrichedRecipes,
+        recipes: recipes,
         page,
         perPage,
         totalItems,
-        totalPages,
+        totalPages: Math.ceil(totalItems / perPage),
         hasPreviousPage: page > 1,
-        hasNextPage: page < totalPages,
+        hasNextPage: page < Math.ceil(totalItems / perPage),
       },
     });
   };
 
 
-// /profile/favorites створити приватний ендпоінт для додавання рецепту до списку улюблених
+// ================================ADD RECIPET IN FAVORITES =======================================
 // http://localhost:3000/api/recipes/profile/favorites
 
 export const addToFavorites = async (req, res, next) => {
@@ -235,12 +212,7 @@ export const addToFavorites = async (req, res, next) => {
   const totalItems = user.favorites.length;
   const totalPages = Math.ceil(totalItems / perPage);
 
-
-
-  // передаємо в getEnrichedRecipes масив рецептів для збагачення їх інгредієнтами
   const enrichedRecipes = await getEnrichedRecipes(populatedUser.favorites);
-
-
 
   res.status(200).json({
     status: 200,
@@ -248,7 +220,7 @@ export const addToFavorites = async (req, res, next) => {
       ? 'Recipe already in favorites'
       : 'Recipe added to favorites',
     data: {
-      favorites: enrichedRecipes,
+      recipes: enrichedRecipes,
       page,
       perPage,
       totalItems,
@@ -258,7 +230,7 @@ export const addToFavorites = async (req, res, next) => {
     },
   });
 };
-
+// ================================DELETE RECIPET FROM FAVORITES =======================================
 //  /favorites/:recipeId' створити приватний ендпоінт для видалення рецепту зі списку улюблених
 export const removeFavorite = async (req, res, next) => {
   const userId = req.user._id;
@@ -287,82 +259,57 @@ export const removeFavorite = async (req, res, next) => {
 
   await user.save();
 
-
-
-  // Завантажити повні об'єкти рецептів, що залишилися у списку favorites
   const enrichedFavorites = await Recipe.find({
     _id: { $in: user.favorites },
   });
 
-
-
-    // передаємо в getEnrichedRecipes масив рецептів для збагачення їх інгредієнтами
   const enrichedRecipes = await getEnrichedRecipes(enrichedFavorites);
-
-
-
-
 
   res.status(200).json({
     status: 200,
     message: 'Recipe removed from favorites successfully',
     data: {
-      favorites: enrichedRecipes, // повертаємо повні об'єкти рецептів
+      recipes: enrichedRecipes, // повертаємо повні об'єкти рецептів
     },
   });
 };
 
-// отримання улюблених рецептів
+// ================================GET ALL FAVORITES RECIPES=========================================
 // http://localhost:3000/api/recipes/profile/favorites?page=1
 
 export const getFavorites = async (req, res, next) => {
   const userId = req.user._id;
-  const { page, perPage, skip } = parsePaginationParams(req.query);
-  const filter = parseRecipeFilterParams(req.query);
+  const { page, perPage, skip, sortBy, sortOrder, filter } = parseQueryOptions(req.query);
 
   const user = await UsersCollection.findById(userId);
-
-  if (!user) {
-    throw createHttpError(404, 'User not found');
-  }
+  if (!user) { throw createHttpError(404, 'User not found'); }
 
   // Фільтруємо тільки рецепти, які є у favorites користувача
   filter._id = { $in: user.favorites };
 
   const totalItems = await Recipe.countDocuments(filter);
   if (totalItems === 0) {
-    throw createHttpError(
-      404,
-      'No favorite recipes found matching your criteria',
-    );
-  }
-
-  const totalPages = Math.ceil(totalItems / perPage);
+    throw createHttpError( 404,'No favorite recipes found matching your criteria' ); }
 
   const favorites = await Recipe.find(filter)
+    .collation({ locale: 'en', strength: 2 })
+    .sort({ [sortBy]: sortOrder === 'asc' ? 1 : -1 })
     .skip(skip)
-    .limit(perPage)
-    .sort({ createdAt: -1 });
+    .limit(perPage);
 
-
-
-      // передаємо в getEnrichedRecipes масив рецептів для збагачення їх інгредієнтами
   const enrichedRecipes = await getEnrichedRecipes(favorites);
-
-
-
 
   res.status(200).json({
     status: 200,
     message: 'Successfully retrieved favorite recipes',
     data: {
-      enrichedRecipes,
+      recipes: enrichedRecipes,
       page,
       perPage,
       totalItems,
-      totalPages,
+      totalPages: Math.ceil(totalItems / perPage),
       hasPreviousPage: page > 1,
-      hasNextPage: page < totalPages,
+      hasNextPage: page < Math.ceil(totalItems / perPage),
     },
   });
 };
