# src/middlewares/validateBody.js
@@ -2,14 +2,19 @@ import createHttpError from 'http-errors';
 
 export const validateBody = (schema) => async (req, res, next) => {
   try {
-console.log('до валідатор', req.body.ingredients);
+
     if (req.body.ingredients && typeof req.body.ingredients === 'string') {
       req.body.ingredients = JSON.parse(req.body.ingredients);
     }
     await schema.validateAsync(req.body, { abortEarly: false });
     next();
-  } catch (error) {
-    const errors = error.details.map(detail => detail.message);
-    next(createHttpError(400, errors));
   }
+  catch (error)
+  {
+  const errors = error.details.map(detail => detail.message);
+  next(createHttpError(400, {
+    message: 'Validation failed',
+    errors,
+  }));
+  };
 };
